--- a/ipl.ipynb
+++ b/ipl.ipynb
@@ -2,27 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "96c11839",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "874ec163",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from math import floor\n",
+    "from sklearn.ensemble import RandomForestRegressor"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "ea3a1012",
    "metadata": {},
    "outputs": [],
@@ -32,38 +26,201 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "b60e55e5",
    "metadata": {},
    "outputs": [],
    "source": [
     "result=pd.read_csv('IPL_Matches_Result_2008_2022.csv')\n",
-    "input=pd.read_csv('input_test_file.csv')"
+    "input1=pd.read_csv('input_test_file.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "99718c2f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>innings</th>\n",
+       "      <th>overs</th>\n",
+       "      <th>ballnumber</th>\n",
+       "      <th>batter</th>\n",
+       "      <th>bowler</th>\n",
+       "      <th>non-striker</th>\n",
+       "      <th>extra_type</th>\n",
+       "      <th>batsman_run</th>\n",
+       "      <th>extras_run</th>\n",
+       "      <th>total_run</th>\n",
+       "      <th>non_boundary</th>\n",
+       "      <th>isWicketDelivery</th>\n",
+       "      <th>player_out</th>\n",
+       "      <th>kind</th>\n",
+       "      <th>fielders_involved</th>\n",
+       "      <th>BattingTeam</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1312200</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>YBK Jaiswal</td>\n",
+       "      <td>Mohammed Shami</td>\n",
+       "      <td>JC Buttler</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Rajasthan Royals</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1312200</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>YBK Jaiswal</td>\n",
+       "      <td>Mohammed Shami</td>\n",
+       "      <td>JC Buttler</td>\n",
+       "      <td>legbyes</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Rajasthan Royals</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1312200</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>JC Buttler</td>\n",
+       "      <td>Mohammed Shami</td>\n",
+       "      <td>YBK Jaiswal</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Rajasthan Royals</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1312200</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>YBK Jaiswal</td>\n",
+       "      <td>Mohammed Shami</td>\n",
+       "      <td>JC Buttler</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Rajasthan Royals</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1312200</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>YBK Jaiswal</td>\n",
+       "      <td>Mohammed Shami</td>\n",
+       "      <td>JC Buttler</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Rajasthan Royals</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        ID  innings  overs  ballnumber       batter          bowler  \\\n",
+       "0  1312200        1      0           1  YBK Jaiswal  Mohammed Shami   \n",
+       "1  1312200        1      0           2  YBK Jaiswal  Mohammed Shami   \n",
+       "2  1312200        1      0           3   JC Buttler  Mohammed Shami   \n",
+       "3  1312200        1      0           4  YBK Jaiswal  Mohammed Shami   \n",
+       "4  1312200        1      0           5  YBK Jaiswal  Mohammed Shami   \n",
+       "\n",
+       "   non-striker extra_type  batsman_run  extras_run  total_run  non_boundary  \\\n",
+       "0   JC Buttler        NaN            0           0          0             0   \n",
+       "1   JC Buttler    legbyes            0           1          1             0   \n",
+       "2  YBK Jaiswal        NaN            1           0          1             0   \n",
+       "3   JC Buttler        NaN            0           0          0             0   \n",
+       "4   JC Buttler        NaN            0           0          0             0   \n",
+       "\n",
+       "   isWicketDelivery player_out kind fielders_involved       BattingTeam  \n",
+       "0                 0        NaN  NaN               NaN  Rajasthan Royals  \n",
+       "1                 0        NaN  NaN               NaN  Rajasthan Royals  \n",
+       "2                 0        NaN  NaN               NaN  Rajasthan Royals  \n",
+       "3                 0        NaN  NaN               NaN  Rajasthan Royals  \n",
+       "4                 0        NaN  NaN               NaN  Rajasthan Royals  "
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "ball_by_ball.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "eb660701",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "input=pd.read_csv('input_test_file.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "id": "e5155820",
    "metadata": {},
    "outputs": [
@@ -71,7 +228,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\tarun\\AppData\\Local\\Temp\\ipykernel_14092\\1013198355.py:187: DeprecationWarning: In a future version, `df.iloc[:, i] = newvals` will attempt to set the values inplace instead of always setting a new array. To retain the old behavior, use either `df[df.columns[i]] = newvals` or, if columns are non-unique, `df.isetitem(i, newvals)`\n",
+      "C:\\Users\\tarun\\AppData\\Local\\Temp\\ipykernel_6772\\3132366960.py:180: DeprecationWarning: In a future version, `df.iloc[:, i] = newvals` will attempt to set the values inplace instead of always setting a new array. To retain the old behavior, use either `df[df.columns[i]] = newvals` or, if columns are non-unique, `df.isetitem(i, newvals)`\n",
       "  a.iloc[:,4:6]=pd.DataFrame({'batsmen':batt1,'bowlers':bowll1})\n",
       "D:\\Program Files\\anaconda3\\lib\\site-packages\\sklearn\\base.py:420: UserWarning: X does not have valid feature names, but RandomForestRegressor was fitted with feature names\n",
       "  warnings.warn(\n",
@@ -81,14 +238,7 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "from math import floor\n",
-    "from sklearn.ensemble import RandomForestRegressor\n",
     "r=RandomForestRegressor()\n",
-    "input1=pd.read_csv('input_test_file.csv')\n",
-    "ball_by_ball=pd.read_csv('IPL_Ball_by_Ball_2008_2022.csv')\n",
-    "result=pd.read_csv('IPL_Matches_Result_2008_2022.csv')\n",
     "innings=list(ball_by_ball['innings'].values)\n",
     "total_run1=list(ball_by_ball['total_run'].values)\n",
     "id_original1=list(ball_by_ball['ID'].values)\n",
@@ -284,8 +434,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "fe53dbfc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8485586058653075"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r.score(x1,y1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d71c9b8c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "138ea8de",
    "metadata": {},
    "outputs": [],
    "source": []
